# src/main/resources/api/openapi.yml
@@ -102,6 +102,24 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/Recipes'
+    post:
+      summary: Create a recipe in recipes collection. Only authenticated users can create recipes
+      operationId: createRecipe
+      tags:
+        - Recipes
+      security:
+        - basicAuth:[]
+      requestBody:
+        $ref: '#/components/requestBodies/CreateRecipe'
+      responses:
+        201:
+          $ref: '#/components/responses/RecipeCreated'
+        400:
+          $ref: '#/components/responses/400-BadRequest'
+        401:
+          $ref: '#/components/responses/401-Unauthorized'
+        403:
+          $ref: '#/components/responses/403-Forbidden'
 components:
   securitySchemes:
     basicAuth:
@@ -128,6 +146,16 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Ingredient'
+    CreateRecipe:
+      required: true
+      description: Recipe creation request
+      content:
+        application/hal+json:
+          schema:
+            $ref: '#/components/schemas/Recipe'
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Recipe'
   responses:
     Index:
       description: Retrieve links to main API resources
@@ -173,6 +201,14 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Recipes'
+    RecipeCreated:
+      description: Successful recipe creation response
+      headers:
+        Location:
+          description: Link to the created recipe. Can be used ot retrieve, update or delete the created recipe
+          schema:
+            type: string
+            example: 'https://cena.adhuc.org/api/recipes/d71e2fc7-09e3-4241-97a5-dc3383d35e98'
     400-BadRequest:
       description: Bad syntax or incorrect request
       content:
@@ -357,6 +393,43 @@ components:
     Recipe:
       description: A recipe detail
       type: object
+      required:
+        - id
+        - name
+        - content
+        - '_links'
+      properties:
+        id:
+          description: Recipe identity
+          type: string
+          format: uuid
+          readOnly: true
+          example: 'd71e2fc7-09e3-4241-97a5-dc3383d35e98'
+        name:
+          description: Recipe name
+          type: string
+          minLength: 1
+          example: 'Tomato, cucumber and mozzarella salad'
+        content:
+          description: Recipe content
+          type: string
+          minLength: 1
+          example: 'Cut everything into dices, mix it, dress it'
+        '_links':
+          type: object
+          readOnly: true
+          required:
+            - self
+          properties:
+            self:
+              description: Link to this recipe detail. Can be used to update or delete the recipe
+              type: object
+              required:
+                - href
+              properties:
+                href:
+                  type: string
+                  example: 'https://cena.adhuc.org/api/recipes/d71e2fc7-09e3-4241-97a5-dc3383d35e98'
       additionalProperties: true
     Error:
       description: General error structure
